# gpt-cli-rust

./: .env.example  Cargo.toml
src/: lib.rs  main.rs
